[package]
name = "fetch-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
mockito = "1.4.0"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }